feat(config): add FINAGE API key

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 # API KEYS
 OANDA_API_KEY=YOUR_OANDA_API_KEY
 TELEGRAM_BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
+FINAGE_API_KEY=YOUR_FINAGE_API_KEY
 
 # Signal Settings
 CONFIDENCE_THRESHOLD=70
